tests/machine/x/clj/left_join.error
exit status 1
Syntax error reading source at (/workspace/mochi/tests/machine/x/clj/left_join.clj:94:1).
EOF while reading, starting at line 27

Full report at:
/tmp/clojure-14909578438877157879.edn
